# save-my-mac-storage

./: .bandit  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  RELEASE.md  SECURITY.md  USAGE_EXAMPLES.md  analytics_dashboard.py  bandit.yaml  categories.py  config.py  coverage.xml  detailed_gui.py  docker-compose.yml  gui_cleaner.py  mac_cleaner.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_cleaner.sh  security.py  setup.py  test_architecture.py  test_complete_gui.py  test_database.py  test_detailed_modal.py  test_enhanced_display.py  test_frontend.py  test_integration.py  test_phase4.py  (+3 more)
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  INSTALLATION.md
homebrew/: macos-cleaner.rb
scripts/: build_and_publish.py  build_app.py  create_dmg.py  docker_build.py  release.py  update_homebrew.rb
src/mac_cleaner/: __init__.py  categories.py  cli.py  config.py  config_manager.py  detailed_gui.py  file_analyzer.py  gui.py  interfaces.py  mac_cleaner.py  plugins.py  privilege_manager.py  safety_manager.py  security.py  space_analyzer.py  web_gui.py
src/mac_cleaner/core/: __init__.py  analytics.py  async_cleaner.py  async_plugin_manager.py  config_manager.py  database.py  enhanced_cleaner.py  notifications.py  scheduler.py
src/mac_cleaner/gui/: __init__.py  __main__.py  analytics_gui.py  detailed_analysis.py  detailed_gui.py  gui.py
src/mac_cleaner/plugins/: __init__.py  plugins.py
src/mac_cleaner/utils/: __init__.py
src/mac_cleaner/web/: __init__.py  web_gui.py
src/mac_cleaner/web/templates/: error.html  index.html
templates/: index.html  index_old.html
tests/: conftest.py  test_basic_error_handling.py  test_cli.py  test_config_manager.py  test_file_analyzer.py  test_mac_cleaner.py  test_plugins.py  test_safety_manager.py  test_security.py  test_space_analyzer.py  test_web_api.py
tests/integration/: test_full_workflow.py
